Prevent text wrapping in competition timeline cards for better layout consistency and to add the gap

--- a/src/scss/cs/competition.scss
+++ b/src/scss/cs/competition.scss
@@ -79,11 +79,17 @@
   }
 
   &-box-container {
-  @media (max-width: 576px) {
-    margin-bottom: 15px;
+    @media (min-width: 576px) {
+      margin-left: 15px;
+    }
+    @media (max-width: 576px) {
+      margin-bottom: 15px;
+    }
   }
 
-}
+  .no-wrap {
+     flex-wrap: nowrap !important;
+  }
 
   &-arrow {
     width: 111px;
